# CrossRename

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PYPI_README.rst  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
CrossRename/: main.py  utils.py
src/crossrename/: main.py  rename.py  utils.py
tests/: test_sanitize.py  test_wsl.sh
