[project]
name = "CrossRename"
version = "1.5.1"
authors = [
    { name = "Emmanuel C. Jemeni", email = "jemenichinonso11@gmail.com" },
]
description = "Harmonize file and directory names for Linux, Windows and macOS."
readme = "PYPI_README.rst"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "files",
    "folders",
    "rename",
    "linux",
    "windows",
    "macos",
    "transferring",
    "filename",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = ["packaging>=26.2"]

[project.scripts]
crossrename = "crossrename.main:main"

[project.urls]
"Homepage" = "https://github.com/Jemeni11/CrossRename"
"Bug Tracker" = "https://github.com/Jemeni11/CrossRename/issues"
"Changelog" = "https://github.com/Jemeni11/CrossRename/blob/master/CHANGELOG.md"
"Funding" = "https://buymeacoffee.com/jemeni11"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.18", "ty>=0.0.52"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "F",    # Pyflakes rules
    "W",    # PyCodeStyle warnings
    "E",    # PyCodeStyle errors
    "I",    # Sort imports properly
    "UP",   # Warn if certain things can changed due to newer Python versions
    "C4",   # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",  # Good use of string concatenation
    "ICN",  # Use common import conventions
    "RET",  # Good return practices
    "SIM",  # Common simplification rules
    "TID",  # Some good import practices
    "TC",   # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",  # Use pathlib instead of os.path
    "TD",   # Be diligent with TODO comments
    "FURB", # Suggest more idiomatic Python patterns
    "B",    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
]

[tool.ty.rules]
unresolved-import = "warn"
